////////////////////////////////////////////////////////////////////////////////
// Copyright Â© 2022 xx foundation                                             //
//                                                                            //
// Use of this source code is governed by a license that can be found in the  //
// LICENSE file.                                                              //
////////////////////////////////////////////////////////////////////////////////

syntax = "proto3";

package channelsFileTransfer;

option go_package = "gitlab.com/elixxir/client/channelsFileTransfer";

// FileInfoMsg contains all the information needed to download a file. Once a
// file is uploaded to the recipientID, it is transmitted to other users so that
// they can download the file themselves from the ID.
message FileInfoMsg {
    string fileName = 1;      // Name of the file
    string fileType = 2;      // String that indicates type of file
    float  retry = 3;         // Determines number of resends
    bytes  preview = 4;       // A preview of the file
    bytes  fid = 5;           // The file's ID
    bytes  recipientID = 6;   // ID to listen on to receive file
    int64  SentTimestamp = 7; // Time the file was queued to send, unix nano
    bytes  transferKey = 8;   // 256-bit encryption key
    bytes  transferMac = 9;   // 256-bit MAC of the entire file
    uint32 numParts = 10;     // Number of file parts
    uint32 size = 11;         // The size of the file, in bytes
}